# zmk-dongle-screen

./: CMakeLists.txt
boards/shields/dongle_screen/: Kconfig.defconfig
boards/shields/dongle_screen/boards/: nice_nano.overlay  xiao_ble.overlay
boards/shields/dongle_screen/src/widgets/: battery_status.c
